Fix README formatting Add missing 'all' target in database generator Makefile Fix registration page to work if reCAPTCHA is disabled

--- a/config/schema/Makefile
+++ b/config/schema/Makefile
@@ -27,3 +27,5 @@ roles:
 	cat roles.sql |sqlite3 $(DB)
 users_roles:
 	cat users_roles.sql |sqlite3 $(DB)
+
+all: users payments sessions locations judges flights judges_flights entries entries_flights roles users_roles
